<resources>
    <string name="app_name">Haat Bazaar</string>
    <string name="language_preferred">English</string>
    <string name="phone_input_field_hint_english">Phone</string>
    <string name="password_input_field_hint_english">Password</string>
    <string name="forgot_password_button_text_english">Forgot Password?</string>
    <string name="enter_button_text_english">Sign in with Google</string>
    <string name="revolutionize_cattle_commerce">Revolutionize Cattle Commerce.</string>
    <string name="analytics">Analytics</string>
    <string name="accounts">Accounts</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Analytics</string>
    <string name="date_range">Date Range</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="cows_sold">Cows</string>
    <string name="total_number_of_cows_sold">Total sales:</string>
    <string name="goats_sold">Goats</string>
    <string name="money_received">Money\nReceived:</string>
    <string name="commission_earned">Commission Earned</string>
    <string name="active_accounts">Active Accounts</string>
    <string name="add_new_account">Add New Account</string>
    <string name="account_information">Account Information</string>
    <string name="add_account">Add Account</string>
    <string name="name">Name</string>
    <string name="selected_photo">Selected Photo</string>
    <string name="proceed">Proceed</string>
    <string name="cow">Cow</string>
    <string name="goat">Goat</string>
    <string name="camel">Camel</string>
    <string name="sheep">Sheep</string>
    <string name="type_of_purchased_animal">Purchased Animal Type</string>
    <string name="select_all_types_of_purchased_animals_disclaimer">Select type of animals purchased</string>
    <string name="quantity_of_purchased_animal">Purchased Animal Quantity</string>
    <string name="select_quantity_of_all_purchased_animals_disclaimer">Set the quantity of all purchased animals.</string>
    <string name="set_the_quantity">Set The Quantity</string>
    <string name="set_the_price">Set The Price</string>
    <string name="set_the_type">Set The Type</string>
    <string name="delete_animal_from_cart_disclaimer">Removing this animal completely from your cart will exclude it from your purchase.\n\nThis means you won\'t be able to check out with [(animal name)] and it won\'t be included on your final invoice.\n\nAre you sure you want to remove it?</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="remove_from_cart_title">Remove From Cart</string>
    <string name="custom">Custom</string>
    <string name="more">More</string>
    <string name="app">App</string>
    <string name="color_scheme">Color Scheme</string>
    <string name="system_default">(System Default)</string>
    <string name="language">Language</string>
    <string name="support_amp_about"><![CDATA[Support & About]]></string>
    <string name="english">(English)</string>
    <string name="help_center">Help Center</string>
    <string name="terms_of_use">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log Out</string>
    <string name="cash_received">Cash Received</string>
    <string name="animal_sold">Animal Sold</string>
    <string name="email">Email</string>
    <string name="export_report">Export Report</string>
    <string name="price_of_purchased_animal">Purchased Animal Price</string>
    <string name="set_price_of_all_purchased_animals_disclaimer">Set the price of all purchased animals.</string>
    <string name="price">Price</string>
    <string name="retrieving_customer_info_title">Retrieving customer\'s information</string>
    <string name="retrieving_customer_info_disclaimer">Please wait while we retrieve the customer\'s information.</string>
    <string name="retrieving_categories_title">Retrieving categories</string>
    <string name="retrieving_categories_disclaimer">Please wait while we retrieve your categories.</string>
    <string name="retrieving_seller_accounts_title">Retrieving seller accounts</string>
    <string name="retrieving_seller_accounts_disclaimer">Please wait while we retrieve your seller accounts.</string>
    <string name="sellers_name">Seller\'s Name</string>
    <string name="set_the_seller_name">Set the seller name</string>
    <string name="set_the_seller_name_of_all_purchased_animals_disclaimer">Set the seller name of all purchased animals.</string>
    <string name="customers_name">Customer\'s Information</string>
    <string name="set_customers_information_disclaimer">Set customer\'s information</string>
    <string name="customers_code">Customer\'s Code</string>
    <string name="fetch_customers_information">Fetch customer\'s information</string>
    <string name="or_set_customers_information_manually_below">Or set customer\'s information manually below</string>
    <string name="customers_name_hint">Customer\'s Name</string>
    <string name="customer_s_address">Customer\'s Address</string>
    <string name="customer_not_found_message">Unable to find a customer with the provided code. Please check if the you have entered the correct code or type in the form below.</string>
    <string name="invoice">Invoice</string>
</resources>