<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".views.activities.MainActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_screen_title"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_purchased_animal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/md_theme_primary"
        app:layout_constraintStart_toStartOf="@id/text_screen_title"
        app:layout_constraintTop_toBottomOf="@id/text_screen_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_select_type_of_animals_disclaimer"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/select_all_types_of_purchased_animals_disclaimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_screen_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_categories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_select_type_of_animals_disclaimer"
        app:layout_constraintBottom_toTopOf="@id/button_proceed"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/set_the_quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>