<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".views.activities.AddAccountActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_screen_title"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/md_theme_primary"
        app:layout_constraintStart_toStartOf="@id/text_screen_title"
        app:layout_constraintTop_toBottomOf="@id/text_screen_title" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_title_account_information"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/account_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_screen_title" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_add_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_title_account_information">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingBottom="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEditText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputedittext_field_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_input_field_hint_english"
                    android:inputType="phone"
                    android:maxLength="13" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEditText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/shapeableImageView_profile_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/icon_profile_placeholder_with_background" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_remove_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/md_theme_tertiary"
                    android:drawableEnd="@drawable/icon_add_photo"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/md_theme_onPrimary"
                    android:text="Add Photo"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/shapeableImageView_profile_photo"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_account" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>